re-designed front-end fixed layout issues

--- a/themes/iflex-theme/css/front-page.css
+++ b/themes/iflex-theme/css/front-page.css
@@ -25,11 +25,24 @@
 
 #hero-section {
   width: 100%;
-  height: 47vh;
+  height: 57vh;
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: 30% center;
   background-size: cover;
   background-attachment: fixed;
+  position: relative;
+}
+
+#hero-section::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, rgba(0, 0, 0, 1), transparent);
+  pointer-events: none;
+  z-index: 1; /* on top of text if higher than content */
 }
 
 #hero-section-heading {
@@ -87,7 +100,7 @@
 }
 
 /* 💻 Large screens (≥ 1024px) */
-@media (min-width: 1024px) {
+@media (min-width: 1023px) {
   #marco-img {
     width: 450px;
     height: 450px;
@@ -98,22 +111,21 @@
 
   #hero-section {
     background-repeat: no-repeat;
-    background-position: center top;
-    background-size: contain;
+    background-position: 15% top;
+    background-size: cover;
     background-attachment: fixed;
     width: 100%;
     height: 68vh;
   }
 
   #hero-section-heading {
-    font-size: 8rem;
+    font-size: 6rem;
     letter-spacing: 1rem;
     font-weight: 900;
     color: #f11b1b;
     text-align: left;
     width: 100%;
     text-align: center;
-    -webkit-text-stroke: 3px #ffffff;
   }
 }
 
@@ -129,4 +141,11 @@
   100% {
     transform: translateY(0);
   }
+}
+
+.custom-hr {
+  height: 2px; /* makes it thicker */
+  opacity: 1; /* ensures full color visibility */
+  border: none; /* removes default border */
+  background-color: #f11b1b;
 }
