--- a/themes/iflex-theme/css/navbar.css
+++ b/themes/iflex-theme/css/navbar.css
@@ -45,6 +45,19 @@
   top: 0;
 }
 
+#header-container {
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(0, 0, 0, 0.8) 70%,
+    rgba(224, 15, 15, 0) 100%
+  );
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
 /* Shown state on small screens */
 .nav-hidden.show {
   opacity: 1;
